<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Logo图标-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/dp88"
        android:layout_height="@dimen/dp88"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp60"
        android:background="@drawable/logo" />

    <!-- 手机号 -->
    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp40"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp50"
        android:layout_below="@+id/img_logo"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp30">
        <LinearLayout
            android:id="@+id/line_phone1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/img_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/phone"
                android:layout_marginLeft="@dimen/dp10"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp17"
                android:hint="@string/phone"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp10"
                android:textCursorDrawable="@color/text_black"/>

        </LinearLayout>
        <View
            android:id="@+id/view_gray1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/line"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dp10"/>
    </RelativeLayout>


    <!-- 密码-->
    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp40"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp10"
        android:layout_below="@+id/rl_phone"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp30">
        <LinearLayout
            android:id="@+id/line_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/img_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/password"
                android:layout_marginLeft="@dimen/dp10"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp17"
                android:inputType="textPassword"
                android:hint="@string/edit_password"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp10"
                android:textCursorDrawable="@color/text_black"/>

        </LinearLayout>
        <View
            android:id="@+id/view_gray3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/line"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dp10"/>
    </RelativeLayout>

    <!-- 已有账号快捷登录、忘记密码-->
    <RelativeLayout
        android:id="@+id/line_forget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_password"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp30"
        android:layout_marginTop="@dimen/dp14"
        android:layout_marginVertical="@dimen/dp16">

        <TextView
            android:id="@+id/tv_shell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp13"
            android:layout_gravity="left"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp13"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/tv_shell"/>

    </RelativeLayout>

    <!-- 登录 -->
    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_forget"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/login"
            android:gravity="center"
            android:background="@drawable/shape5"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18"/>
    </RelativeLayout>

    <!-- 没有账号、立即注册 -->
    <RelativeLayout
        android:id="@+id/line_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/rl_login"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/no"
            android:textColor="@color/text_black"
            android:textSize="13sp" />

    </RelativeLayout>


</RelativeLayout>