<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/top"
        layout="@layout/top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/line"
            android:layout_margin="@dimen/dp15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_margin="@dimen/line">

                <EditText
                    android:id="@+id/et_idea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/background_light"
                    android:hint="@string/feedback_idea"
                    android:gravity="start"
                    android:textSize="@dimen/sp14"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp10"
                    android:textCursorDrawable="@color/text_black"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:background="@color/line"
            android:layout_margin="@dimen/dp15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_margin="@dimen/line">

                <EditText
                    android:id="@+id/et_tel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/background_light"
                    android:hint="@string/feedback_tel"
                    android:textSize="@dimen/sp14"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_marginRight="@dimen/dp10"
                    android:textCursorDrawable="@color/text_black"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/bt_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape5"
            android:text="@string/feedback_submit"
            android:textSize="@dimen/sp18"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp140"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginLeft="@dimen/dp30"/>

    </LinearLayout>



</LinearLayout>
