<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--banner-->
            <RelativeLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:background="@mipmap/bg">
                <RelativeLayout
                    android:id="@+id/rl_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp40">
                    <ImageView
                        android:id="@+id/img_header"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:background="@mipmap/header"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_set"
                    android:textSize="@dimen/sp14"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp10"/>
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp14"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/rl_header"
                    android:layout_marginTop="@dimen/dp18" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_below="@+id/tv_name">
                    <TextView
                        android:id="@+id/tv_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp14"
                        android:layout_centerInParent="true"/>
                    <ImageView
                        android:id="@+id/img_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_tel"
                        android:background="@mipmap/tel"
                        android:visibility="gone"
                        android:layout_marginLeft="@dimen/dp7"/>
                </RelativeLayout>


            </RelativeLayout>

            <!--gridview自选按钮-->
            <RelativeLayout
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/banner"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginLeft="@dimen/dp25"
                android:layout_marginRight="@dimen/dp25">

                <!--我的资料、提现、我的客服-->
                <LinearLayout
                    android:id="@+id/ll_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/layout1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp44"
                            android:layout_height="@dimen/dp44"
                            android:background="@mipmap/my_data"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_data"
                            android:layout_marginTop="@dimen/dp10"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp44"
                            android:layout_height="@dimen/dp44"
                            android:background="@mipmap/my_withdraw"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_withdraw"
                            android:layout_marginTop="@dimen/dp10"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp44"
                            android:layout_height="@dimen/dp44"
                            android:src="@mipmap/my_service"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_service"
                            android:layout_marginTop="@dimen/dp10"/>

                    </LinearLayout>



                </LinearLayout>
                <!--地址管理、银行卡管理、分享好友-->
                <LinearLayout
                    android:id="@+id/ll_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/ll_1"
                    android:layout_marginTop="@dimen/dp25">
                    <LinearLayout
                        android:id="@+id/layout4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp44"
                            android:layout_height="@dimen/dp44"
                            android:src="@mipmap/my_address"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_address"
                            android:layout_marginTop="@dimen/dp10"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp44"
                            android:layout_height="@dimen/dp44"
                            android:src="@mipmap/card"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_card"
                            android:layout_marginTop="@dimen/dp10"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp44"
                            android:layout_height="@dimen/dp44"
                            android:src="@mipmap/fenxiang"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_share"
                            android:layout_marginTop="@dimen/dp10"/>

                    </LinearLayout>



                </LinearLayout>

                <!--地址管理、银行卡管理、分享好友-->
                <LinearLayout
                    android:id="@+id/ll_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/ll_2"
                    android:layout_marginTop="@dimen/dp25">
                    <LinearLayout
                        android:id="@+id/layout7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp44"
                            android:layout_height="@dimen/dp44"
                            android:src="@mipmap/xinshoujiangtang"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_greenhand"
                            android:layout_marginTop="@dimen/dp10"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp44"
                            android:layout_height="@dimen/dp44"
                            android:src="@mipmap/security"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_account"
                            android:layout_marginTop="@dimen/dp10"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp44"
                            android:layout_height="@dimen/dp44"
                            android:src="@mipmap/my_join"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_join"
                            android:layout_marginTop="@dimen/dp10"/>

                    </LinearLayout>



                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>



</RelativeLayout>
