<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/top"
        layout="@layout/top"/>

    <!--姓名-->
    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_below="@+id/top"
        android:layout_marginLeft="@dimen/sp15"
        android:layout_marginRight="@dimen/sp15"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_name"
            android:textSize="@dimen/sp15"
            android:textColor="@color/text_black"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/sp13"
            android:textColor="@color/text_black"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"
        android:layout_below="@+id/rl_name"
        android:layout_marginLeft="@dimen/sp15"
        android:layout_marginRight="@dimen/sp15"/>

    <!--手机号-->
    <RelativeLayout
        android:id="@+id/rl_tel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_below="@+id/view1"
        android:layout_marginLeft="@dimen/sp15"
        android:layout_marginRight="@dimen/sp15"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_tel"
            android:textSize="@dimen/sp15"
            android:textColor="@color/text_black"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/sp13"
            android:textColor="@color/text_black"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_marginLeft="@dimen/sp15"
        android:layout_marginRight="@dimen/sp15"
        android:background="@color/line"
        android:layout_below="@+id/rl_tel"/>

    <!--性别-->
    <RelativeLayout
        android:id="@+id/rl_gender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_below="@+id/view2"
        android:layout_marginLeft="@dimen/sp15"
        android:layout_marginRight="@dimen/sp15"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_sex"
            android:textSize="@dimen/sp15"
            android:textColor="@color/text_black"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/sp13"
            android:textColor="@color/text_black"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_marginLeft="@dimen/sp15"
        android:layout_marginRight="@dimen/sp15"
        android:background="@color/line"
        android:layout_below="@+id/rl_gender"/>

    <!--身份证号-->
    <RelativeLayout
        android:id="@+id/rl_idNo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_below="@+id/view3"
        android:layout_marginLeft="@dimen/sp15"
        android:layout_marginRight="@dimen/sp15"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_id"
            android:textSize="@dimen/sp15"
            android:textColor="@color/text_black"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_idNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/sp13"
            android:textColor="@color/text_black"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_marginLeft="@dimen/sp15"
        android:layout_marginRight="@dimen/sp15"
        android:background="@color/line"
        android:layout_below="@+id/rl_idNo"/>



</RelativeLayout>
